Add API validate OTP for B2B officer
